force-app/main/default/objects/PermissionPack__c/PermissionPack__c.object-meta.xml
<CustomObject>
    <description>Stores the different permission packages, usually Profiles or PermissionSets.</description>
    <label>Permission Pack</label>
    <nameField>
        <label>Pack Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permission Packs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>