force-app/main/default/objects/PermissionPack__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A simple description of the use of this permission pack</description>
    <inlineHelpText>A simple description of the use of this permission pack</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>