force-app/main/default/objects/PermissionPack__c/fields/hasActivationRequired__c.field-meta.xml
<CustomField>
    <fullName>hasActivationRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the permission set requires an associated active session (true) or not (false). Available in API version 37.0 and later.</description>
    <inlineHelpText>Indicates whether the permission set requires an associated active session</inlineHelpText>
    <label>Active session</label>
    <type>Checkbox</type>
</CustomField>