force-app/main/default/objects/PermissionPack__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>The permission set label</description>
    <inlineHelpText>A brief description that quickly identifies the permission set.</inlineHelpText>
    <label>Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>