force-app/main/default/objects/PermissionPack__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <description>Either the related permission set license or the user license associated with this permission set. Available in API version 38.0 and later. Use this field instead of userLicense, which is deprecated and only available up to API Version 37.0.</description>
    <inlineHelpText>Either the related permission set license or the user license associated with this permission set.</inlineHelpText>
    <label>License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>