force-app/main/default/objects/PermissionPack__c/recordTypes/PermissionSet.recordType-meta.xml
<RecordType>
    <fullName>PermissionSet</fullName>
    <active>true</active>
    <description>Indicates that the package describes a PermissionSet</description>
    <label>Permission Set</label>
</RecordType>