force-app/main/default/objects/PermissionPack__c/recordTypes/Profile.recordType-meta.xml
<RecordType>
    <fullName>Profile</fullName>
    <active>true</active>
    <description>Indicates that the package describes a profile</description>
    <label>Profile</label>
</RecordType>